--- a/src/content/themes/casper/post.hbs
+++ b/src/content/themes/casper/post.hbs
@@ -56,8 +56,12 @@
 
         {{/author}}
 
-            <section class="share">
+            <section class="share bdsharebuttonbox">
                 <h4>Share this post</h4>
+                 <a href="#" class="bds_more" data-cmd="more"></a>
+                 <a href="#" class="bds_tsina" data-cmd="tsina" title="weibo"></a>
+                 <a href="#" class="bds_weixin" data-cmd="weixin" title="weixin"></a>
+                 <a href="#" class="bds_douban" data-cmd="douban" title="douban"></a>
                 <a class="icon-twitter" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
                     onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
                     <span class="hidden">Twitter</span>
@@ -71,13 +75,9 @@
                     <span class="hidden">Google+</span>
                 </a>
 
-                <div class="bdsharebuttonbox">
-                    <a href="#" class="bds_more" data-cmd="more"></a>
-                    <a href="#" class="bds_tsina" data-cmd="tsina" title="weibo"></a>
-                    <a href="#" class="bds_weixin" data-cmd="weixin" title="weixin"></a>
-                    <a href="#" class="bds_douban" data-cmd="douban" title="douban"></a>
-                </div>
-<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"24"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+               
+                <script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"24"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
+                </script>
 
             </section>
 
@@ -105,5 +105,7 @@
     </a>
     {{/prev_post}}
 </aside>
+
+{{content_foot}}
 
 {{/post}}
