--- a/src/content/themes/casper/post.hbs
+++ b/src/content/themes/casper/post.hbs
@@ -56,12 +56,9 @@
 
         {{/author}}
 
-            <section class="share bdsharebuttonbox">
+            <section class="share ">
                 <h4>Share this post</h4>
-                 <a href="#" class="bds_more" data-cmd="more"></a>
-                 <a href="#" class="bds_tsina" data-cmd="tsina" title="weibo"></a>
-                 <a href="#" class="bds_weixin" data-cmd="weixin" title="weixin"></a>
-                 <a href="#" class="bds_douban" data-cmd="douban" title="douban"></a>
+
                 <a class="icon-twitter" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
                     onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
                     <span class="hidden">Twitter</span>
@@ -74,11 +71,6 @@
                    onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
                     <span class="hidden">Google+</span>
                 </a>
-
-               
-                <script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"24"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
-                </script>
-
             </section>
 
         </footer>
