--- a/src/content/themes/casper/post.hbs
+++ b/src/content/themes/casper/post.hbs
@@ -94,7 +94,7 @@
             {{/prev_post}}
         </aside>
         
-        {{content_comment}}
+        {{content_foot}}
 
     </article>
     
