--- a/src/content/themes/casper/post.hbs
+++ b/src/content/themes/casper/post.hbs
@@ -8,7 +8,7 @@
 
 <header class="main-header post-head {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
     <nav class="main-nav {{#if image}}overlay{{/if}} clearfix">
-        {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" /></a>{{/if}}
+        {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
         {{#if @blog.navigation}}
             <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
         {{/if}}
@@ -56,9 +56,8 @@
 
         {{/author}}
 
-            <section class="share ">
+            <section class="share">
                 <h4>Share this post</h4>
-
                 <a class="icon-twitter" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
                     onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
                     <span class="hidden">Twitter</span>
@@ -74,7 +73,7 @@
             </section>
 
         </footer>
-        
+
         <aside class="read-next">
             {{#next_post}}
             <a class="read-next-story {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
@@ -97,8 +96,6 @@
         {{content_foot}}
 
     </article>
-    
 </main>
-
 
 {{/post}}
