--- a/src/content/themes/casper/partials/navigation.hbs
+++ b/src/content/themes/casper/partials/navigation.hbs
@@ -8,6 +8,9 @@
             <li class="nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}</a></li>
         {{/foreach}}
     </ul>
+    <div >
+        {{tag_cloud limit="all"}}
+    </div>
     <a class="subscribe-button icon-feed" href="{{@blog.url}}/rss/">Subscribe</a>
 </div>
 <span class="nav-cover"></span>
