--- a/src/core/server/views/user-error.hbs
+++ b/src/core/server/views/user-error.hbs
@@ -1,6 +1,6 @@
 <!doctype html>
-<!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="zh-CN"><![endif]-->
-<!--[if (gte IE 9)| IEMobile |!(IE)]><!--><html class="no-js" lang="zh-CN"><!--<![endif]-->
+<!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
+<!--[if (gte IE 9)| IEMobile |!(IE)]><!--><html class="no-js" lang="en"><!--<![endif]-->
   <head>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -15,6 +15,7 @@
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
     <meta http-equiv="cleartype" content="on">
 
+    <link rel="stylesheet" type='text/css' href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
     <link rel="stylesheet" href="{{asset "ghost.css" ghost="true" minifyInProduction="true"}}" />
   </head>
   <body>
@@ -31,7 +32,7 @@
             <section class="error-message">
               <h1 class="error-code">{{code}}</h1>
               <h2 class="error-description">{{message}}</h2>
-              <a class="error-link" href="{{@blog.url}}">返回首页 →</a>
+              <a class="error-link" href="{{@blog.url}}">Go to the front page →</a>
             </section>
           </section>
         </section>
