--- a/src/content/themes/Ghost-Flat/tag.hbs
+++ b/src/content/themes/Ghost-Flat/tag.hbs
@@ -4,27 +4,29 @@
     <div class="timeline">
         <dl>
             {{#foreach posts}}
-            <dd class="{{#if @odd}}pos-left{{else}}pos-right{{/if}} clearfix">
+            <dd class="pos-left clearfix">
                 <div class="circ circ-{{#if @odd}}odd{{/if}}">
                 </div>
                 <div class="time">
                     <span data-toggle="tooltip" data-original-title="{{date format='YYYY-MM-DD H:mm'}}" title="">
                         {{date timeago=true}}
                     </span>
+                    
+                    <h4 class="events-heading">
+                        {{#foreach tags}}
+                            <a href="{{url}}"><span class="label {{#if @odd}}label-primary{{else}}label-default{{/if}}"><i class="glyphicon glyphicon-tag"></i> {{name}}</span></a>
+                           &nbsp;
+                        {{/foreach}}
+                   </h4>
                 </div>
                 <div class="events">
                     <div class="events-body">
                         <h4 class="events-heading">
                             <a href="{{url}}">{{{title}}}</a>
                         </h4>
-                        <h4 class="events-heading">
-                            {{#foreach tags}}
-                                <a href="{{url}}"><span class="label {{#if @odd}}label-primary{{else}}label-default{{/if}}"><i class="glyphicon glyphicon-tag"></i> {{name}}</span></a>
-                                &nbsp;
-                            {{/foreach}}
-                        </h4>
+                        
                         <p>
-                            {{excerpt characters="200"}}&hellip;
+                            {{excerpt characters="400"}}&hellip;
                         </p>
                     </div>
                 </div>
