--- a/Ghost/content/themes/StayPuft/default.hbs
+++ b/Ghost/content/themes/StayPuft/default.hbs
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="http://7xlv0v.com1.z0.glb.clouddn.com/images/favicon.png">
 
     {{! Styles'n'Scripts }}
-    <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
+    <link rel="stylesheet" type="text/css" href="http://7xlxf6.com1.z0.glb.clouddn.com/css/screen.css" />
 <link href='http://fonts.useso.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet'>
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
@@ -94,10 +94,10 @@
     <script src="http://cdn.bootcss.com/fitvids/1.1.0/jquery.fitvids.js"></script>
     <script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>
       <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <!--<script src="{{asset "js/jquery.ghostHunter.min.js"}}"></script>
+    <!--<script src="http://7xlxf6.com1.z0.glb.clouddn.com/js/jquery.ghostHunter.min.js"></script>
    -->
 
-    <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
+    <script type="text/javascript" src="http://7xlxf6.com1.z0.glb.clouddn.com/js/index.js"></script>
   </body>
 
 </html>
