--- a/Ghost/content/themes/StayPuft/default.hbs
+++ b/Ghost/content/themes/StayPuft/default.hbs
@@ -13,14 +13,14 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="http://7xlv0v.com1.z0.glb.clouddn.com/images/favicon.png">
+    <link rel="shortcut icon" href="http://7xlxf6.com1.z0.glb.clouddn.com/favicon.png">
 
     {{! Styles'n'Scripts }}
-    <link rel="stylesheet" type="text/css" href="http://7xlxf6.com1.z0.glb.clouddn.com/css/screen.css" />
-<link href='http://fonts.useso.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="http://7xlxf6.com1.z0.glb.clouddn.com/assets/css/screen.css" />
+<link href='//fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet'>
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
-<link href="//cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
+<link href="http://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
     <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/solarized_dark.min.css" rel="stylesheet">
 
     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
@@ -97,7 +97,8 @@
     <!--<script src="http://7xlxf6.com1.z0.glb.clouddn.com/js/jquery.ghostHunter.min.js"></script>
    -->
 
-    <script type="text/javascript" src="http://7xlxf6.com1.z0.glb.clouddn.com/js/index.js"></script>
+    <script type="text/javascript" src="http://7xlxf6.com1.z0.glb.clouddn.com/assets/js/index.js"></script>
+
   </body>
 
 </html>
